--- a/config/dino_training.yaml
+++ b/config/dino_training.yaml
@@ -9,7 +9,7 @@ parking_model:
   epochs: 26
   learning_rate: 0.0001
   weight_decay: 0.0001
-  batch_size: 16
+  batch_size: 16 # 16 for large dino
 
   training_map: "e2e_parking/Town_Opt_1000" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/vast/rs9193/Town_Opt_1000"
   validation_map: "e2e_parking/Town_Opt_1000_Val" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/scratch/rs9193/Town_Opt_1000_Val"
@@ -32,7 +32,7 @@ parking_model:
   final_dim: [294, 294]
   bev_down_sample: 14
   use_depth_distribution: 1
-  backbone: "dinov2_vitl14_reg" # "dinov2_vitb14_reg", "dinov2_vitl14_reg"
+  backbone: "dinov2_vitb14_reg" # "dinov2_vitb14_reg", "dinov2_vitl14_reg"
 
   # segmentation
   seg_classes: 3
