--- a/config/dino_training.yaml
+++ b/config/dino_training.yaml
@@ -11,8 +11,8 @@ parking_model:
   weight_decay: 0.0001
   batch_size: 16 # 16
 
-  training_map: "e2e_parking/Town04_Opt" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/vast/rs9193/Town_Opt_1000"
-  validation_map: "e2e_parking/Town04_Opt_Val" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/scratch/rs9193/Town_Opt_1000_Val"
+  training_map: "e2e_parking/Town_Opt_1000" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/vast/rs9193/Town_Opt_1000"
+  validation_map: "e2e_parking/Town_Opt_1000" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/scratch/rs9193/Town_Opt_1000_Val"
   # training_map: "/scratch/rs9193/dynamics_1/" #/scratch/rs9193/dynamics_1/ # "/vast/rs9193/Town_Opt_1000"
   # validation_map: "/scratch/rs9193/dynamics_1/" #/scratch/rs9193/dynamics_1/ # "/scratch/rs9193/Town_Opt_1000_Val"
   future_frame_nums: 4
