--- a/config/dino_training.yaml
+++ b/config/dino_training.yaml
@@ -1,6 +1,6 @@
 parking_model:
   # train
-  data_dir: '/data_ssd/'
+  data_dir: '/home/intern2025/research/ParkWithUncertainty'
   log_dir: './log/'
   checkpoint_dir: './ckpt'
   log_every_n_steps: 5
@@ -11,8 +11,8 @@ parking_model:
   weight_decay: 0.0001
   batch_size: 16 # 16
 
-  training_map: "e2e_parking/Town_Opt_1000" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/vast/rs9193/Town_Opt_1000"
-  validation_map: "e2e_parking/Town_Opt_1000_Val" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/scratch/rs9193/Town_Opt_1000_Val"
+  training_map: "e2e_parking/Town04_Opt" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/vast/rs9193/Town_Opt_1000"
+  validation_map: "e2e_parking/Town04_Opt_Val" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/scratch/rs9193/Town_Opt_1000_Val"
   # training_map: "/scratch/rs9193/dynamics_1/" #/scratch/rs9193/dynamics_1/ # "/vast/rs9193/Town_Opt_1000"
   # validation_map: "/scratch/rs9193/dynamics_1/" #/scratch/rs9193/dynamics_1/ # "/scratch/rs9193/Town_Opt_1000_Val"
   future_frame_nums: 4
@@ -60,3 +60,16 @@ parking_model:
   # dynamics model ckpt
   resume_ckpt_path: "./ckpt/exp_2025_7_11_2_2_41/E2EParking-epoch=03-val_loss=1.73.ckpt"
   hybrid_ckpt_path: "./ckpt/exp_2025_7_11_2_2_41/E2EParking-epoch=03-val_loss=1.73.ckpt"
+
+  # diffusion parameters
+  horizon: 10
+  observation_dim: 9
+  action_dim: 8
+  diffusion_feat_dim: 3
+  n_timesteps: 1000
+  loss_type: 'l1'
+  clip_denoised: False
+  predict_epsilon: True
+  action_weight: 1.0
+  loss_discount: 1.0
+  loss_weights: null
